# opencor

./: .gitmodules  CMakeLists.txt  make.bat  pymake
src/misc/: cliutils.h
src/plugins/: solverinterface.h
src/plugins/api/BioSignalMLAPI/: CMakeLists.txt
src/plugins/datastore/PythonStore/: CMakeLists.txt
src/plugins/datastore/PythonStore/cmake/: FindNumPy.cmake
src/plugins/datastore/PythonStore/src/: pythonstore.cpp  pythonstore.h  pythonstoreglobal.h  pythonstoreplugin.cpp  pythonstoreplugin.h  pythonstoreplugin.json
src/plugins/miscellaneous/JupyterKernel/: CMakeLists.txt  README.md
src/plugins/miscellaneous/JupyterKernel/src/: jupyterkernelplugin.cpp  jupyterkernelplugin.h  setup.py
src/plugins/miscellaneous/PythonWindow/: CMakeLists.txt
src/plugins/miscellaneous/PythonWindow/src/: pythonwindow.cpp  pythonwindow.h  pythonwindowplugin.cpp  pythonwindowplugin.h  pythonwindowplugin.json
src/plugins/miscellaneous/PythonWrapper/src/: pythonwrapperplugin.h
src/plugins/simulation/SimulationExperimentView/: CMakeLists.txt
src/plugins/simulation/SimulationExperimentView/i18n/: SimulationExperimentView_fr.ts
src/plugins/simulation/SimulationExperimentView/res/: SimulationExperimentView_ui.qrc
src/plugins/simulation/SimulationExperimentView/src/: simulationexperimentviewcontentswidget.cpp  simulationexperimentviewinformationgraphswidget.cpp  simulationexperimentviewinformationgraphswidget.h  simulationexperimentviewinformationparameterswidget.cpp  simulationexperimentviewinformationparameterswidget.h  simulationexperimentviewinformationsimulationwidget.cpp  simulationexperimentviewinformationsimulationwidget.h  simulationexperimentviewinformationsolverswidget.cpp  simulationexperimentviewinformationsolverswidget.h  simulationexperimentviewinformationwidget.cpp  simulationexperimentviewinformationwidget.h  simulationexperimentviewplugin.cpp  simulationexperimentviewplugin.h  simulationexperimentviewsimulationwidget.cpp  (+4 more)
src/plugins/solver/CVODESSolver/: CMakeLists.txt
src/plugins/support/SimulationSupport/: CMakeLists.txt
src/plugins/tool/BioSignalMLBrowser/: CMakeLists.txt
(+29 files in other folders)
